# tidal-language-model

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  AssociativeDataset.py  CLAUDE.md  ConstantGenerator.py  ConstantLanguageModel.py  Dashboard.py  DataPipeline.py  Dockerfile  DynamicLRScheduler.py  Evaluator.py  GatingEnvironment.py  Generator.py  HormoneEnvironment.py  HormoneModulator.py  HormoneRLAgent.py  Main.py  MetricsLogger.py  Physics2D.py  Preprocess.py  README.md  RLTrainer.py  RewardComputer.py  SemanticEndocrineSystem.py  SequentialDataset.py  TidalLanguageModel.py  Trainer.py  TransformerLM.py  Utils.py  experiment_utils.py  inference.Dockerfile  inference_server.py  pyproject.toml  requirements-inference.txt  requirements.txt  test_ConstantLanguageModel.py  test_HormoneRL.py  test_TidalLanguageModel.py  (+2 more)
configs/: base_config.yaml  rl_config.yaml
dashboard/: .dockerignore  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
dashboard/redis/: redis.conf  redis.prod.conf
deploy/: setup.sh
legacy_research/: Generator.py  README.md  TidalLanguageModel.py  dashboard.py
plugins/tidal/: DataPipeline.py  (+17 more)
scripts/: build_video.sh  rollout.sh  validate_memory.py  vast-onstart.sh  vast-start.sh
tests/: test_Evaluator.py  test_TransformerLM.py  test_archive_plan.py  test_archive_session.py  test_experiment_utils.py  test_inference_dockerfile.py  test_memory_hooks.py  test_metrics_logger.py  test_package_imports.py  test_validate_memory.py  test_worker_agent.py  test_worker_manifest.py
(+30 files in other folders)
